--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -93,7 +93,7 @@ a.block {
   .row-condensed > div {
     padding: 0 5px; }
 
-.ribbon, body.home .information h3 {
+.ribbon, .home .information h3 {
   display: inline-block;
   width: 100%;
   position: relative;
@@ -101,7 +101,7 @@ a.block {
   padding: 10px;
   background-color: #f39c12;
   color: #fff; }
-  .ribbon:before, body.home .information h3:before {
+  .ribbon:before, .home .information h3:before {
     content: '';
     display: block;
     position: absolute;
@@ -112,7 +112,7 @@ a.block {
     border: 5px solid #c87f0a;
     border-left: 5px solid transparent;
     border-bottom: 5px solid transparent; }
-  .ribbon:after, body.home .information h3:after {
+  .ribbon:after, .home .information h3:after {
     content: '';
     display: block;
     position: absolute;
@@ -129,61 +129,61 @@ header.site-header h1 {
 header.site-header h1, header.site-header a, header.site-header p {
   color: #000; }
 
-header.site-header nav .links {
+header.site-header .links {
   padding-top: 10px; }
   @media (max-width: 767px) {
-    header.site-header nav .links {
+    header.site-header .links {
       border-top: 1px solid #eee; } }
-  header.site-header nav .links .link {
+  header.site-header .links .link {
     padding: 10px 0; }
     @media (max-width: 767px) {
-      header.site-header nav .links .link {
+      header.site-header .links .link {
         background-color: rgba(238, 238, 238, 0.5);
         border-radius: 3px; } }
-    header.site-header nav .links .link .icon {
+    header.site-header .links .link .icon {
       min-height: 30px;
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain; }
-    header.site-header nav .links .link.about .icon {
+    header.site-header .links .link.about .icon {
       background-image: url(./images/icon/bird_128px.png); }
-    header.site-header nav .links .link.introduction .icon {
+    header.site-header .links .link.introduction .icon {
       background-image: url(./images/icon/sheep_128px.png); }
-    header.site-header nav .links .link.examination .icon {
+    header.site-header .links .link.examination .icon {
       background-image: url(./images/icon/cat_128px.png); }
-    header.site-header nav .links .link.pricing .icon {
+    header.site-header .links .link.pricing .icon {
       background-image: url(./images/icon/chicken_128px.png); }
-    header.site-header nav .links .link.trimming .icon {
+    header.site-header .links .link.trimming .icon {
       background-image: url(./images/icon/dog_128px.png); }
-    header.site-header nav .links .link.hotel .icon {
+    header.site-header .links .link.hotel .icon {
       background-image: url(./images/icon/parrot_128px.png); }
-    header.site-header nav .links .link h3 {
+    header.site-header .links .link h3 {
       font-size: 1rem;
       margin: 0; }
 
 main.site-body {
   min-height: 700px; }
 
-body .hero {
+.hero {
   background-size: cover;
   background-image: url(./images/bg.jpg);
   background-position: 50% 60%; }
-  body .hero h2 {
+  .hero h2 {
     color: #fff;
     font-family: mplus-1p-regular;
     letter-spacing: 5px;
     text-shadow: 0 1px 1px #000; }
-  body .hero .typography {
+  .hero .typography {
     padding: 30px 0 210px 0; }
 
-body.home .post h3 {
+.home .post h3 {
   position: relative;
   border-bottom: 1px solid #eee;
   font-size: 1.2rem;
   margin: 0;
   padding: 10px 0 5px 0;
   color: #000; }
-  body.home .post h3:before {
+  .home .post h3:before {
     position: absolute;
     bottom: -1px;
     width: 30%;
@@ -191,24 +191,24 @@ body.home .post h3 {
     display: block;
     border-bottom: 1px solid #2980b9; }
 
-body.home .post article {
+.home .post article {
   border-bottom: 1px solid #eee;
   height: 4rem;
   overflow: hidden; }
-  body.home .post article h4 {
+  .home .post article h4 {
     font-weight: 900;
     color: #000;
     font-size: 1rem;
     margin: 0; }
 
-body.home .map h3 {
+.home .map h3 {
   position: relative;
   border-bottom: 1px solid #eee;
   font-size: 1.2rem;
   margin: 0;
   padding: 10px 0 5px 0;
   color: #000; }
-  body.home .map h3:before {
+  .home .map h3:before {
     position: absolute;
     bottom: -1px;
     width: 30%;
@@ -216,36 +216,45 @@ body.home .map h3 {
     display: block;
     border-bottom: 1px solid #2980b9; }
 
-body.home .map iframe {
+.home .map iframe {
   max-height: 300px; }
 
-body.home .information {
+.home .information {
   padding: 20px;
   padding-top: 10px;
   background-color: rgba(238, 238, 238, 0.5);
   border: 1px solid #eee;
   box-shadow: 0 1px 0 #eee;
   border-radius: 3px; }
-  body.home .information h3 {
+  .home .information h3 {
     font-size: 14px;
     max-width: 100px; }
 
-body.single section header h2, body.page section header h2 {
+.single header h2,
+.page header h2 {
   position: relative;
   border-bottom: 2px solid #eee;
   font-family: mplus-1p-regular;
   margin: 0;
   padding: 20px 0;
   color: #000; }
-  body.single section header h2:before, body.page section header h2:before {
+  .single header h2:before,
+  .page header h2:before {
     position: absolute;
     bottom: -2px;
     width: 30%;
     content: '';
     display: block;
     border-bottom: 2px solid #2980b9; }
-  body.single section header h2 small, body.page section header h2 small {
+  .single header h2 small,
+  .page header h2 small {
     display: block; }
+
+.single .body,
+.page .body {
+  font-size: 1.2rem;
+  line-height: 2em;
+  color: #000; }
 
 footer {
   font-size: 0.8rem; }
