--- a/src/themes/vh/assets/sass/style.scss
+++ b/src/themes/vh/assets/sass/style.scss
@@ -155,6 +155,12 @@ main.site-body {
   .body {
     font-size: $font-lg;
     color: #000;
+
+    h1, h2, h3, h4, h5, h6 {
+      @include color-line(1px, $color-main);
+      padding: 10px 0;
+      margin-top: 1em;
+    }
   }
 }
 
