--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -171,8 +171,7 @@ main.site-body {
   .hero h2 {
     color: #fff;
     font-family: mplus-1p-regular;
-    letter-spacing: 5px;
-    text-shadow: 0 1px 1px #000; }
+    letter-spacing: 5px; }
   .hero .typography {
     padding: 30px 0 210px 0; }
 
