Change accent font stack.

--- a/src/themes/vh/assets/sass/_variable.scss
+++ b/src/themes/vh/assets/sass/_variable.scss
@@ -1,5 +1,5 @@
 $font-stack: 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
-$font-stack-accent: mplus-1p-regular;
+$font-stack-accent: mplus-1p-regular, sans-serif;
 
 $font-sm: .8rem;
 $font-lg: 1.2rem;
