--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -102,7 +102,7 @@ a.block {
     border-bottom: 5px solid transparent; }
 
 header.site-header h1 {
-  font-family: mplus-1p-regular; }
+  font-family: mplus-1p-regular, sans-serif; }
 
 header.site-header h1, header.site-header a, header.site-header p {
   color: #000; }
@@ -143,7 +143,7 @@ main.site-body {
   min-height: 700px; }
 
 body .hero h2 {
-  font-family: mplus-1p-regular; }
+  font-family: mplus-1p-regular, sans-serif; }
 
 body.home .hero {
   background-color: rgba(41, 128, 185, 0.2);
@@ -205,7 +205,7 @@ footer {
       margin: 0 10px; }
   footer .copy {
     padding: 30px 0;
-    font-family: mplus-1p-regular; }
+    font-family: mplus-1p-regular, sans-serif; }
 
 @media (max-width: 767px) {
   html {
