--- a/src/themes/vh/assets/sass/_reset.scss
+++ b/src/themes/vh/assets/sass/_reset.scss
@@ -2,6 +2,9 @@
 
 html {
   font-size: 14px;
+  @media (max-width:767px) {
+    font-size: 12px;
+  }
 }
 
 body {
@@ -33,5 +36,5 @@ h5 { font-size: 1.2rem; }
 h6 { font-size: 1.1rem; }
 
 hr {
-    margin: 0;
+  margin: 0;
 }
