--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -99,7 +99,7 @@ a.block {
   .row-condensed > div {
     padding: 0 5px; }
 
-.board, .home section.business, .home section.information {
+.board, .home section.information, .home section.business {
   padding: 20px;
   border: 1px solid #e1e1e1;
   outline: 3px solid rgba(238, 238, 238, 0.5); }
@@ -156,9 +156,9 @@ main.site-body {
   .hero .typography {
     padding: 30px 0 210px 0; }
 
-.home section.business, .home section.information {
+.home section.information {
   padding-top: 10px; }
-  .home section.business h3, .home section.information h3 {
+  .home section.information h3 {
     display: inline-block;
     width: 100%;
     position: relative;
@@ -168,7 +168,7 @@ main.site-body {
     margin: 0 -30px;
     font-size: 14px;
     max-width: 100px; }
-    .home section.business h3:before, .home section.information h3:before {
+    .home section.information h3:before {
       content: '';
       display: block;
       position: absolute;
@@ -179,7 +179,7 @@ main.site-body {
       border: 5px solid #c87f0a;
       border-left: 5px solid transparent;
       border-bottom: 5px solid transparent; }
-    .home section.business h3:after, .home section.information h3:after {
+    .home section.information h3:after {
       content: '';
       display: block;
       position: absolute;
@@ -191,33 +191,18 @@ main.site-body {
       border-bottom: 10px solid transparent; }
 
 .home section.business h3 {
-  display: inline-block;
-  width: 100%;
   position: relative;
-  padding: 10px;
-  background-color: #2980b9;
-  color: #fff; }
+  border-bottom: 1px solid #eee;
+  padding-bottom: 5px;
+  margin: 0;
+  font-size: 1.2rem; }
   .home section.business h3:before {
+    position: absolute;
+    bottom: -1px;
+    width: 30%;
     content: '';
     display: block;
-    position: absolute;
-    left: 0;
-    bottom: -10px;
-    width: 10px;
-    height: 10px;
-    border: 5px solid #20638f;
-    border-left: 5px solid transparent;
-    border-bottom: 5px solid transparent; }
-  .home section.business h3:after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    right: -30px;
-    height: 10px;
-    border: 25px solid #2980b9;
-    border-right: 5px solid transparent;
-    border-bottom: 10px solid transparent; }
+    border-bottom: 1px solid #2980b9; }
 
 .home section.post h3 {
   position: relative;
