--- a/src/themes/vh/assets/sass/_reset.scss
+++ b/src/themes/vh/assets/sass/_reset.scss
@@ -17,7 +17,7 @@ body {
 }
 
 a {
-  color: $color-main;
+  color: darken($color-main, 10%);
   transition-duration: .2s;
 }
 
@@ -25,7 +25,7 @@ a:hover,
 a:focus,
 a:active {
   text-decoration: none;
-  color: $color-accent;
+  color: $color-main;
 }
 
 h1 { font-size: 2rem; }
