Change access link position.

--- a/src/themes/vh/assets/sass/_helper.scss
+++ b/src/themes/vh/assets/sass/_helper.scss
@@ -83,3 +83,16 @@ a.block {
     border-bottom: $width solid $color;
   }
 }
+
+.ghost {
+  border: 1px solid $color-main;
+  padding: 1px 5px;
+  border-radius: $radius;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: $color-main;
+    color: #fff;
+  }
+}
