--- a/src/themes/vh/assets/sass/style.scss
+++ b/src/themes/vh/assets/sass/style.scss
@@ -42,10 +42,11 @@ nav.menu {
 
   .icon {
     display: inline-block;
-    margin-bottom: -8px;
-    margin-right: 5px;
     width: 30px;
     height: 30px;
+    vertical-align: middle;
+    margin-right: 5px;
+    margin-bottom: 5px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -59,13 +60,12 @@ nav.menu {
   .hotel .icon { background-image: url(./images/icon/parrot_128px.png); }
 
   a {
-    padding: 5px 0 10px 0;
+    padding-top: 5px;
     border-right: 1px solid $color-base;
     text-align: center;
 
     @media (max-width:767px) {
       text-align: left;
-      padding: 10px 0 15px 0;
       border: none;
     }
 
