--- a/src/themes/vh/assets/sass/_reset.scss
+++ b/src/themes/vh/assets/sass/_reset.scss
@@ -28,8 +28,8 @@ a:active {
   color: $color-main;
 }
 
-h1 { font-size: 2rem; }
-h2 { font-size: 1.7rem; }
+h1 { font-size: 3rem; }
+h2 { font-size: 2rem; }
 h3 { font-size: 1.45rem; }
 h4 { font-size: 1.3rem; }
 h5 { font-size: 1.2rem; }
@@ -41,4 +41,8 @@ table.table {
 
 hr {
   margin: 0;
+}
+
+.alert {
+  margin-top: 35px;
 }
