--- a/src/themes/vh/style.css
+++ b/src/themes/vh/style.css
@@ -44,10 +44,10 @@ a:active {
   color: #2980b9; }
 
 h1 {
-  font-size: 2rem; }
+  font-size: 3rem; }
 
 h2 {
-  font-size: 1.7rem; }
+  font-size: 2rem; }
 
 h3 {
   font-size: 1.45rem; }
@@ -66,6 +66,9 @@ table.table {
 
 hr {
   margin: 0; }
+
+.alert {
+  margin-top: 35px; }
 
 @font-face {
   font-family: mplus-1p-regular;
@@ -113,7 +116,8 @@ a.block {
     color: #fff; }
 
 header.site-header h1 {
-  font-family: mplus-1p-regular, sans-serif; }
+  font-family: mplus-1p-regular, sans-serif;
+  display: inline-block; }
   header.site-header h1 a {
     color: #000; }
 
@@ -122,6 +126,18 @@ header.site-header p a {
 
 header.site-header h1, header.site-header p {
   color: #000; }
+
+header.site-header .icon {
+  display: inline-block;
+  width: 90px;
+  height: 50px;
+  vertical-align: bottom;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-image: url(./images/logo.png); }
 
 nav.menu {
   padding: 10px 0;
@@ -136,18 +152,20 @@ nav.menu {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain; }
+  nav.menu .top .icon {
+    background-image: url(./images/logo.png);
+    width: 60px;
+    height: 30px; }
+  nav.menu .medicalpolicy .icon {
+    background-image: url(./images/icon/horse_128px.png); }
+  nav.menu .medicaltreatment .icon {
+    background-image: url(./images/icon/elephant_128px.png); }
   nav.menu .about .icon {
-    background-image: url(./images/icon/bird_128px.png); }
-  nav.menu .introduction .icon {
-    background-image: url(./images/icon/sheep_128px.png); }
-  nav.menu .examination .icon {
     background-image: url(./images/icon/cat_128px.png); }
-  nav.menu .pricing .icon {
-    background-image: url(./images/icon/chicken_128px.png); }
-  nav.menu .trimming .icon {
-    background-image: url(./images/icon/dog_128px.png); }
+  nav.menu .staff .icon {
+    background-image: url(./images/icon/gorilla_128px.png); }
   nav.menu .hotel .icon {
-    background-image: url(./images/icon/parrot_128px.png); }
+    background-image: url(./images/icon/dog_128px.png); }
   nav.menu a {
     padding-top: 5px;
     border-right: 1px solid #eee;
@@ -160,7 +178,7 @@ nav.menu {
       border: none; }
   nav.menu h3 {
     display: inline-block;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     color: #000;
     margin: 0; }
 
@@ -188,8 +206,8 @@ main.site-body {
     background-color: #f39c12;
     color: #fff;
     margin: 0 -30px;
-    font-size: 14px;
-    max-width: 100px; }
+    max-width: 200px;
+    font-weight: 600; }
     .home section.information h3:before {
       content: '';
       display: block;
@@ -206,18 +224,19 @@ main.site-body {
       display: block;
       position: absolute;
       top: 0;
-      right: -30px;
+      right: -25px;
       height: 10px;
       border: 25px solid #f39c12;
-      border-right: 5px solid transparent;
-      border-bottom: 10px solid transparent; }
+      border-right: 0px solid transparent;
+      border-bottom: 15px solid transparent; }
 
 .home section.business h3 {
   position: relative;
   border-bottom: 1px solid #eee;
   padding-bottom: 5px;
   margin: 0;
-  font-size: 1.2rem; }
+  font-size: 1.4rem;
+  font-weight: 600; }
   .home section.business h3:before {
     position: absolute;
     bottom: -1px;
@@ -229,7 +248,7 @@ main.site-body {
 .home section.post h3 {
   position: relative;
   border-bottom: 1px solid #eee;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   margin: 0;
   padding: 10px 0 5px 0;
   color: #000; }
@@ -254,7 +273,7 @@ main.site-body {
 .home section.map h3 {
   position: relative;
   border-bottom: 1px solid #eee;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   margin: 0;
   padding: 10px 0 5px 0;
   color: #000; }
@@ -295,8 +314,11 @@ main.site-body {
 
 .single .body,
 .page .body {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   color: #000; }
+  .single .body h2,
+  .page .body h2 {
+    color: #2980b9; }
   .single .body h1, .single .body h2, .single .body h3, .single .body h4, .single .body h5, .single .body h6,
   .page .body h1,
   .page .body h2,
